Roger_Skyline_VM/Rules/rules.v4
# Generated by iptables-save v1.6.0 on Sun Apr 21 21:17:38 2019
*filter
:INPUT DROP [52:4255]
:FORWARD DROP [0:0]
:OUTPUT DROP [5:377]
:f2b-sshd - [0:0]
-A INPUT -p tcp -m multiport --dports 22 -j f2b-sshd
-A INPUT -p udp -m udp --sport 53 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 53 -j ACCEPT
-A INPUT -p udp -m udp --dport 80 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 80 -j ACCEPT
-A INPUT -p udp -m udp --sport 443 -j ACCEPT
-A INPUT -p tcp -m tcp --sport 443 -j ACCEPT
-A INPUT -p udp -m udp --dport 72 -j ACCEPT
-A INPUT -p tcp -m tcp --dport 72 -j ACCEPT
-A INPUT -p icmp -m icmp --icmp-type 8 -j ACCEPT
-A INPUT -p icmp -j ACCEPT
-A INPUT -i en0 -p tcp -m connlimit --connlimit-above 100 --connlimit-mask 32 --connlimit-saddr -j REJECT --reject-with icmp-port-unreachable
-A INPUT -p tcp -m tcp --dport 72 -m limit --limit 5/sec
-A INPUT -p tcp -m multiport --dports 72,80,443,53 -m recent --set --name portscan --mask 255.255.255.252 --rsource -j DROP
-A OUTPUT -p tcp -m tcp --dport 53 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 53 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 80 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 80 -j ACCEPT
-A OUTPUT -p tcp -m tcp --dport 443 -j ACCEPT
-A OUTPUT -p udp -m udp --dport 443 -j ACCEPT
-A OUTPUT -p tcp -m tcp --sport 72 -j ACCEPT
-A OUTPUT -p udp -m udp --sport 72 -j ACCEPT
-A OUTPUT -p icmp -m icmp --icmp-type 0 -j ACCEPT
-A OUTPUT -p icmp -j ACCEPT
-A f2b-sshd -j RETURN
COMMIT
# Completed on Sun Apr 21 21:17:38 2019
